(ui) Fix checkbox and user menu on high contrast theme

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -98,7 +98,7 @@
 
       ::ng-deep {
         a {
-          color: var(--white);
+          color: var(--textOnAccentColor);
 
           &:hover {
             color: var(--lighterAccentColor);
